# Localization_Fusion_Library

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LocalizationFusionLibrary.desc  README.md  _update_CMake.bat  package.xml  problems.txt  python_modules.txt  version.h
config/: filter_config.json
design/: LocalizationSensorFusionLibraryDesignProposalv0.docx  coding_rules.md  design.md  feature_localization-abbreviations.md  motion_model.md
design/Buffer/: Buffer.md
design/Filters/: non_linear_filters.md
design/MotionModel/: motion_model.md
design/Sensors/: gps.md  imu.md  mahalanobis_thresh.md
design/UML/: FilterBase.md  FilterNode.md  FilterWrapper.md  Measurements.md  MotionModel.md  Overview.md
design/Utilities/: utilities.md
examples/: CMakeLists.txt  main.cpp
examples/ex_filter_config/: CMakeLists.txt  ex_filter_config.cpp
examples/ex_filter_ekf/: CMakeLists.txt  ex_filter_ekf.cpp
examples/ex_filter_wrapper/: CMakeLists.txt  ex_filter_wrapper.cpp
examples/ex_libraries/: CMakeLists.txt  ex_lib.cpp
examples/ex_measurement/: CMakeLists.txt  ex_measurement.cpp
examples/ex_motion_model/: CMakeLists.txt  ex_motion_mod.cpp
examples/ex_sensors/: CMakeLists.txt  ex_sensors_gps.cpp  ex_sensors_imu.cpp  ex_sensors_odom.cpp
interfaces/: CMakeLists.txt  main.cpp
interfaces/include/: C99Types.h  byte_swapping.h  topic_includes.h
interfaces/include/geometry_msgs/msg/: Point.h  Pose.h  PoseWithCovariance.h  Quaternion.h  Twist.h  TwistWithCovariance.h  Vector3.h
interfaces/include/nav_msgs/msg/: Odometry.h
interfaces/include/sensor_msgs/msg/: Imu.h  NavSatFix.h  NavSatStatus.h
interfaces/include/std_msgs/msg/: Header.h  Time.h
interfaces/src/: Header.cpp  Imu.cpp  NavSatFix.cpp  NavSatStatus.cpp  Odometry.cpp  Point.cpp  Pose.cpp  PoseWithCovariance.cpp  Quaternion.cpp  Time.cpp  Twist.cpp  TwistWithCovariance.cpp  Vector3.cpp
reports/: Praktikumsbericht.docx  Report.docx  Weekly_Report_CW31_Mikel_Zhobro.pptx
ros_src/: CMakeLists.txt  package.xml
ros_src/config/: filter_config.json  filter_config_1.json  filter_config_2.json  filter_config_3.json  filter_config_gps.json  filter_config_rosario.json
ros_src/include/: filter_node.h
ros_src/launch/: filter_ros_node.launch  filter_ros_node_1.launch  filter_ros_node_2.launch  filter_ros_node_3.launch  filter_ros_node_gps.launch  filter_ros_node_rosario.launch
ros_src/rviz/: config_file.rviz
ros_src/src/: ex_buffer.cpp  ex_timer_buffer.cpp  filter_node.cpp  test_euler.cpp
scripts/cmake/: LocalizationFusionLibraryConfig.cmake  utilities.cmake
src/: CMakeLists.txt
src/filter/: CMakeLists.txt
src/filter/include/filter/: filter_utilities.h
src/filter/src/: filter_utilities.cpp
src/include/buffer/: filter_buffer.h  filter_timer.h
src/include/filter/: filter_base.h  filter_config.h  filter_ekf.h  filter_wrapper.h  filter_wrapper.hpp
src/include/measurement/: measurement.h  measurement.hpp  measurement_conversions.h  measurement_conversions.hpp  measurement_time_keeper.h
src/include/motion_model/: motion_model.h
src/include/sensors/: gps.h  imu.h  odom.h  sensor_base.h  sensors.h
src/include/utilities/: filter_euler_zyx.h  filter_utilities.h
src/motion_model/: CMakeLists.txt
src/motion_model/include/: motion_model.h
src/motion_model/include/motion_model/: motion_model.h
src/src/: filter_utilities.cpp
test/: CMakeLists.txt  TestHelper.h  tst_motion_model_ctra.cpp  tst_motion_model_ctra3d.cpp  tst_motion_model_ctrv.cpp
test/tst_libraries/: CMakeLists.txt
